tests/functional/repl_characterization/data/repl_input.test
@args -v
Adding variables gives simple user feedback

  Lix $VERSION
  Type :? for help.
  nix-repl> foo = 5
  Added foo.

  nix-repl> foo = 10
  Updated foo.

Optional semicolon at the end, allow setting multiple variables in one line

  nix-repl> foo = 2;
  Updated foo.

  nix-repl> foo = 2; bar = 3;
  Updated foo.
  Added bar.

String identifiers work

  nix-repl> "silly name" = null
  Added "silly name".

Attrset syntax works, but without dynamic attrs or merging

  nix-repl> foo.bar = "baz"
  Updated foo.

  nix-repl> foo
  { bar = "baz"; }

  nix-repl> foo."this works" = 42
  Updated foo.

  nix-repl> foo
  { "this works" = 42; }

  nix-repl> foo.bar = "baz"; foo.more = "error"
  error: attribute 'foo' already defined at «string»:1:18
         at «string»:1:12:
              1| foo.bar = "baz"; foo.more = "error"
               |            ^

  nix-repl> ${foo} = 10
  error: dynamic attributes not allowed in REPL
         at «string»:1:1:
              1| ${foo} = 10
               | ^
